[package]
name = "subset-bam"
version = "0.0.1"
authors = ["Ian Fiddes <ian.fiddes@10xgenomics.com>"]

[dependencies]
rust-htslib = "0.20"
csv = "1"
failure = "*"
clap = "*"
terminal_size = "*"
human-panic = "1.0.1"
simplelog = "0.5.0"
log = "*"
tempfile = "*"
rayon = "*"
sha1 = "*"

[profile.release]
debug = true
