[package]
name = "subset-bam"
version = "1.1.0"
authors = ["Ian Fiddes <ian.fiddes@10xgenomics.com>", "Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"]

[dependencies]
rust-htslib = "0.20"
csv = "1"
failure = "*"
clap = "*"
terminal_size = "*"
human-panic = "1.0.1"
simplelog = "0.12.1"
log = "*"
tempfile = "*"
rayon = "*"
ring = "0.14.6"
data-encoding = "*"
faccess="0.2.4"

[profile.release]
debug = 1
lto = true
